examples/test/testpolicy1661.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1661
  namespace: namespace96
spec:
  podSelector:
    matchLabels:
      key39: value46
      key32: value26
      key12: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value30
      podSelector:
        matchLabels:
          key17: value46
